--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div data-role="header" data-position="fixed">
-<h1 id="vehicle_name">{{ vehicle_name }}</h1>
+<h1><span id="vehicle_name">{{ vehicle_name }}</span><span id="locked"></span></h1>
 </div>
 <div role="main" class="ui-content">
     <ul data-role="listview">
@@ -24,20 +24,25 @@
                     if (data.api_error === true) {
                         return;
                     }
-                    $('#vehicle_name').html(data.vehicle_name);
-                    $('#battery_level').html(data.battery_level);
-                    $('#temp_setting').html(data.temp_setting);
-                    $('#inside_temp').html(data.inside_temp);
-                    $('#outside_temp').html(data.outside_temp);
-                    $('.gui_temperature_units').text(data.gui_temperature_units);
+                    $('#vehicle_name').html(data.response.vehicle_name);
+                    $('#battery_level').html(data.response.battery_level);
+                    $('#temp_setting').html(data.response.temp_setting);
+                    $('#inside_temp').html(data.response.inside_temp);
+                    $('#outside_temp').html(data.response.outside_temp);
+                    $('.gui_temperature_units').text(data.response.gui_temperature_units);
+                    if (data.response.locked === true) {
+                        $('#locked').html('	&#128274;');
+                    } else {
+                        $('#locked').html('	&#128275;');
+                    }
                     if (window.skipClimateStateUpdate) {
                         return;
                     }
-                    if (data.is_climate_on === true && !$('#ac_button').prop('checked')) {
+                    if (data.response.is_climate_on === true && !$('#ac_button').prop('checked')) {
                         window.skipChangeEvent = true;
                         $('#ac_button').prop('checked', true).flipswitch('refresh');
                         window.skipChangeEvent = false;
-                    } else if (data.is_climate_on === false && $('#ac_button').prop('checked')) {
+                    } else if (data.response.is_climate_on === false && $('#ac_button').prop('checked')) {
                         window.skipChangeEvent = true;
                         $('#ac_button').prop('checked', false).flipswitch('refresh');
                         window.skipChangeEvent = false;
