Cache database misses by default

--- a/templates/authorize.html
+++ b/templates/authorize.html
@@ -3,7 +3,7 @@
 <div data-role="header" data-position="fixed">
 <h1>{{ title }}</h1>
 </div>
-<div role="main" class="ui-content">
+<div role="main" class="ui-content center-wrapper">
 <p>The following link grants access to your vehicle. Do not share it publicly!</p>
 <p><a href="{{ url_for('user_page', user_id=user_id) }}">{{ url_for('user_page', user_id=user_id, _external=True) }}</a></p>
 </div>
