Charging state, GCP logging, ui changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   "created_at":1586114044
 }</code></pre>
 </div>
-    <input type="text" name="token" data-clear-btn="true" autocomplete="off">
+    <input type="text" name="token" data-clear-btn="true" autocomplete="off" placeholder="Tesla API Refresh Token">
     <h2>or</h2>
     <input type="email" name="email" data-clear-btn="true" autocomplete="on" placeholder="Email of Your Tesla Account">
     <input type="password" name="password" data-clear-btn="true" autocomplete="off" placeholder="Password of Your Tesla Account">
