--- a/templates/user_wait.html
+++ b/templates/user_wait.html
@@ -7,7 +7,7 @@
 <div data-role="header" data-position="fixed">
 <h1>{{ title }} - Please Wait</h1>
 </div>
-<div role="main" class="ui-content">
+<div role="main" class="ui-content center-wrapper">
 <h2>Your Access Begins at <span id="begins_at"></span></h2>
 </div>
 <script>
