--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
   <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='favicon-96x96.png') }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?153b11d22f51466328c6e7d4dfffc1cc5ad20349191a5b0680bbf847c6b34bab">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css" integrity="sha384-SyzOAwcH7y/xYTpH2SXVG8Ikon3Fls9v3x6OOXDzmVD3APv0wsjb/0q0CjpaJkLv" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js" integrity="sha384-XEn4bZ9g8ia7KJWyaf3o/ADO5s2pqwtDl1MdxgCZ9x6rm5QICw5Zk2+vwIJnAeFD" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 <body>
 <div id="page-one" data-role="page">
 {% block content %}{% endblock %}
-<div data-role="footer"><h4>Use At Your Own Risk</h4><h4>This is an independent website and is not affiliated with Tesla, Inc. or its subsidiaries.</h4></div> 
+<div data-role="footer"><h4>Use At Your Own Risk</h4><h4>This is an independent website and is not affiliated with Tesla, Inc. or its subsidiaries.</h4></div>
 </div>
 </body>
 </html>
