--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,8 @@
   <h3>Why?</h3>
   <p>Let's imagine you want to borrow your Tesla to a friend for a weekend. It would be really sweet if during that time your friend could remotely turn the climate control on every time they leave their house. Or maybe they'd like to know when the battery is full if they leave the car at a public charger. This app makes those things possible!</p>
   <p>Hopefully this app will be obsolete one day, but unfortunately the current Tesla's identity and access management is a dumpster fire. You can't even protect your Tesla account with multifactor authentication in the year 2020.</p>
+  <h3>How's the user interface?</h3>
+  <p><img src="{{ url_for('static', filename='example.png') }}" class="pop-out" alt="User interface example"></p>
   <h3>Are you going to steal my Tesla password?</h3>
   <p>No, your email and password are only used for fetching a Tesla API token. Your password is never saved permanently.</p>
   <p>It's still a good idea to distrust random websites. Get that API token yourself, and use it to log in here instead of your password.</p>
