--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -32,11 +32,11 @@
                     if (data.api_error === true) {
                         return;
                     }
-                    $('#vehicle_name').html(data.response.vehicle_name);
-                    $('#battery_level').html(data.response.battery_level);
-                    $('#temp_setting').html(data.response.temp_setting);
-                    $('#inside_temp').html(data.response.inside_temp);
-                    $('#outside_temp').html(data.response.outside_temp);
+                    $('#vehicle_name').text(data.response.vehicle_name);
+                    $('#battery_level').text(data.response.battery_level);
+                    $('#temp_setting').text(data.response.temp_setting.toFixed(1));
+                    $('#inside_temp').text(data.response.inside_temp.toFixed(1));
+                    $('#outside_temp').text(data.response.outside_temp.toFixed(1));
                     $('.gui_temperature_units').text(data.response.gui_temperature_units);
                     if (data.response.locked === true) {
                         $('#locked').find("use").attr("xlink:href", "{{ url_for('static', filename='fa-solid.svg') }}#lock");
@@ -60,9 +60,9 @@
                         $('#ac_button').prop('checked', false).flipswitch('refresh');
                         window.skipChangeEvent = false;
                     }
-                }             
+                }
             });
-            setTimeout(updateData, 5000);              
+            setTimeout(updateData, 5000);
         }
         updateData();
     });
